--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="content-language" content="en">
 <link rel="stylesheet" type="text/css" href="xlsStyles.css">
 <script lang="javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script lang="javascript" src="shim.js"></script>
